
2024-03-17  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
	    Emilien Lemaire <emilien.lemaire@ocamlpro.com>

	* parser.y: generate calls to "cob_prof_function_call" in the
	  parsetree when profiling is unabled, when entering/leaving
	  profiled blocks
	* flag.def: add `-fprof` to enable profiling
	* tree.h: add a flags field to cb_goto, add profiling
	  fields to cb_program, add cb_prof_call enum and export
	  cb_build_prof_call and cb_prof_procedure_fivision functions
	* tree.c (cb_build_program): initialize the new profiling
	  fields of the cb_program structure
	* tree.c (cb_build_goto): add a "flags" argument
	  (stored in the cb_program structure)
	* typeck.c (cb_emit_goto): add a "flags" argument
	  (passed to cb_build_goto)
	* codegen.c: handle profiling code generation under the
	  cb_flag_prof guard

2024-02-19  Boris Eng <boris.eng@ocamlpro.com>

	* parser.y (screen_value_clause): replaced basic literals by literals

2024-01-28  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* parser.y: fix SEGFAULT when checking the BY VALUE arguments of a
          prototype with ANY LENGTH

2024-01-25  David Declerck <david.declerck@ocamlpro.com>

	FR #459: support COLLATING SEQUENCE clause on SELECT / INDEXED files
	* codegen.c (output_file_initialization): output the indexed
	  file/keys collating sequence (were already present in the AST)
	* tree.c (validate_indexed_key_field): process postponed
	  key collating sequences
	* parser.y (collating_sequence_clause, collating_sequence_clause_key):
	  replace CB_PENDING by CB_UNFINISHED on file and key collating sequence
	* flag.def, tree.c, tree.h, cobc.c, parser.y: add and handle a new
	  -fdefault-file-colseq flag to specify the default collating
	  sequence to use for files without a collating sequence clause

2023-10-12  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* cobc.c, codegen.c: new option --include FILE, to #include
	  additional files in the C generated code. Such files can be