@@ -1,4 +1,14 @@
 
+2024-04-24  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
+
+	* replace.c: optimize speed and memory usage. For speed, we add two
+	  fast paths in cb_ppecho_copy_replace() to completely skip the
+	  replacement machinery if there is no need for it. For allocations,
+	  we only allocate tokens that are coming from the lexer (not the
+	  ones passed internally from the copy-replacing stream to the
+	  replace stream) and we use a circular buffer for the temporary
+	  queue of tokens instead of a list.
+
 2024-03-17  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
 	    Emilien Lemaire <emilien.lemaire@ocamlpro.com>
 
